Migrate BenchmarkController.runAssessment() to use Path objects where applicable, refactor RunBenchmarkAssessment.collectOverwhelmedIndicatorNames() to return a list rather than mutating a passed in list